<resources>
    <string name="app_name">LiveDeathClock</string>
    <string name="splash_bir_date">你的出生日期</string>
    <string name="splash_popup_over">完成</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="date">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="second">秒</string>
    <string name="splash_live_year">猜猜自己能活多少岁</string>
    <string name="fragment_live_title">生之钟</string>
    <string name="clock">死之钟锁屏</string>
    <string name="update_bir">修改出生日期</string>
    <string name="death">设定死之钟</string>
    <string name="help">锁屏帮助</string>
    <string name="issue_back">意见反馈</string>
    <string name="score">给我们评分</string>
    <string name="main_live">生之钟</string>
    <string name="main_death">死之钟</string>
    <string name="main_wish">心愿单</string>
    <string name="main_date_calculation">计算日期</string>
    <string name="fragment_live_age">你的年龄</string>
    <string name="age">%d岁</string>
    <string name="fragment_live_existence">在这个世界上，你已经存在了</string>
    <string name="day">天</string>
    <string name="week">周</string>
    <string name="fragment_death_tilte">死之钟</string>
    <string name="fragment_death_gezi_des">每个格子代表一个月，白格用完之时，也是生命结束之日</string>
    <string name="fragment_death_remind_live">您的余生大约还剩下</string>
    <string name="fragment_death_second">%d 秒</string>
    <string name="fragment_death_day">%d 天</string>
    <string name="fragment_death_month">%d 月</string>
    <string name="fragment_death_year">%d 年</string>
    <string name="fragment_death_remind_make_wish">剩下的日子里，你大约可以</string>
    <string name="fragment_death_no_make_wish">没有制定？点击前往制定</string>
    <string name="fragment_death_wish_title">事件</string>
</resources>
