<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/splash_popup_title_color">
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:src="@mipmap/ic_down"
                android:id="@+id/splash_down_ic"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/splash_popup_over"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginRight="10dp"
                android:padding="15dp"
                android:id="@+id/splash_over"/>

    </RelativeLayout>

    <LinearLayout
            android:layout_marginTop="5dp"
            android:background="@color/splash_popup_title_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/year"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/month"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/date"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/hour"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/minute"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:text="@string/second"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <com.wx.wheelview.widget.WheelView
                android:id="@+id/splash_wheel_year"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content" />
        <com.wx.wheelview.widget.WheelView
                android:id="@+id/splash_wheel_month"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        <com.wx.wheelview.widget.WheelView
                android:id="@+id/splash_wheel_date"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        <com.wx.wheelview.widget.WheelView
                android:id="@+id/splash_wheel_hour"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        <com.wx.wheelview.widget.WheelView
                android:id="@+id/splash_wheel_minute"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
        <com.wx.wheelview.widget.WheelView
                android:id="@+id/splash_wheel_second"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>