<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/main_live"
            android:gravity="center">
        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/ic_live_select"
                android:id="@+id/ic_live"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_live"
                android:textColor="#000"
                android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/main_death"
            android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/ic_death"
                android:id="@+id/ic_death"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_death"
                android:textColor="#000"
                android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/main_wish"
            android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/ic_wish"
                android:id="@+id/ic_wish"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_wish"
                android:textColor="#000"
                android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:id="@+id/main_date_calculate"
            android:gravity="center">

        <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/ic_date_calculation"
                android:id="@+id/ic_date_calculation"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_date_calculation"
                android:textColor="#000"
                android:textSize="15sp"/>
    </LinearLayout>

</LinearLayout>