<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:layout_marginTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

        <com.ancroid.work.clockview.ClockView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/fragment_live_clock"/>

        <!--年龄相关文本的布局-->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">
            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/fragment_live_age"
                    android:textSize="15sp"
                    android:textColor="#000"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age"
                    android:textSize="18sp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_marginTop="20dp"
                    android:id="@+id/fragment_live_age"/>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#000"
                    android:layout_marginTop="25dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_live_existence"
                    android:textSize="15sp"
                    android:textColor="#000"
                    android:layout_marginTop="25dp"/>

        </LinearLayout>

        <FrameLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_live_existence_fl">

        </FrameLayout>

    </LinearLayout>

</FrameLayout>